@@ -1,3 +1,14 @@
+2005-03-15  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* tasks: updates.  Executable maps is supported.  NFSv4 and
+	FreeBSD autofs isn't.
+
+	* Makefile.am (EXTRA_DIST): include FAQ in distro.
+
+	* doc/Makefile.am (alldocs): install README.lda and README.osx.
+
+	* FAQ: new file, better late than never.
+
 2005-03-14  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* scripts/amd2ldif.in: patch to add the amdMapName attribute to
